updates on the documentation

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,21 +19,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          # Removed cache option since we don't have a lock file yet
 
       - name: Install dependencies
         run: |
+          npm init -y
           npm install fs-extra
           npm install @docusaurus/core @docusaurus/preset-classic
 
-      - name: Process readme files
-        run: node process-readme-files.js
-
       - name: Create Docusaurus site
         run: |
-          npx create-docusaurus@latest kai-docs-temp classic --typescript
-          cp -r kai-docs-temp/docs/* kai-docs-temp/docs/
-          cp kai-docs-temp/sidebars.js kai-docs-temp/
+          npx create-docusaurus@latest kai-docs-temp classic --typescript --skip-install
+
+      - name: Process readme files
+        run: |
+          mkdir -p kai-docs-temp/docs
+          node process-readme-files.js
 
       - name: Build documentation site
         run: |
@@ -44,7 +45,9 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: ${{ secrets.DOCS_DEPLOY_TOKEN }}
+          # You need to create this token with repo permissions and add it to your repository secrets
+          # If deploying to the same repository, you can use the built-in GITHUB_TOKEN
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: kai-docs-temp/build
           repository-name: Basilakis/kai-readme.github.io
