--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,34 +19,206 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          # Removed cache option since we don't have a lock file yet
+
+      - name: Install Yarn
+        run: npm install -g yarn
+
+      - name: Create documentation site from scratch
+        run: |
+          # Create a basic package.json
+          mkdir -p kai-docs-temp
+          cd kai-docs-temp
+
+          # Initialize a new package.json
+          cat > package.json << 'EOL'
+          {
+            "name": "kai-documentation",
+            "version": "1.0.0",
+            "private": true,
+            "scripts": {
+              "docusaurus": "docusaurus",
+              "start": "docusaurus start",
+              "build": "docusaurus build",
+              "swizzle": "docusaurus swizzle",
+              "deploy": "docusaurus deploy",
+              "clear": "docusaurus clear",
+              "serve": "docusaurus serve",
+              "write-translations": "docusaurus write-translations",
+              "write-heading-ids": "docusaurus write-heading-ids"
+            },
+            "dependencies": {
+              "@docusaurus/core": "^2.4.3",
+              "@docusaurus/preset-classic": "^2.4.3",
+              "@mdx-js/react": "^1.6.22",
+              "clsx": "^1.2.1",
+              "prism-react-renderer": "^1.3.5",
+              "react": "^17.0.2",
+              "react-dom": "^17.0.2"
+            },
+            "browserslist": {
+              "production": [
+                ">0.5%",
+                "not dead",
+                "not op_mini all"
+              ],
+              "development": [
+                "last 1 chrome version",
+                "last 1 firefox version",
+                "last 1 safari version"
+              ]
+            },
+            "engines": {
+              "node": ">=16.14"
+            }
+          }
+          EOL
+
+          # Create basic Docusaurus config
+          cat > docusaurus.config.js << 'EOL'
+          // @ts-check
+          const lightCodeTheme = require('prism-react-renderer/themes/github');
+          const darkCodeTheme = require('prism-react-renderer/themes/dracula');
+
+          /** @type {import('@docusaurus/types').Config} */
+          const config = {
+            title: 'KAI Documentation',
+            tagline: 'Comprehensive documentation for the KAI project',
+            favicon: 'img/favicon.ico',
+            url: 'https://basilakis.github.io',
+            baseUrl: '/kai-readme.github.io/',
+            organizationName: 'Basilakis',
+            projectName: 'kai-readme.github.io',
+            trailingSlash: false,
+            onBrokenLinks: 'warn',
+            onBrokenMarkdownLinks: 'warn',
+            i18n: {
+              defaultLocale: 'en',
+              locales: ['en'],
+            },
+            presets: [
+              [
+                'classic',
+                /** @type {import('@docusaurus/preset-classic').Options} */
+                ({
+                  docs: {
+                    sidebarPath: require.resolve('./sidebars.js'),
+                    routeBasePath: '/',
+                  },
+                  blog: false,
+                  theme: {
+                    customCss: require.resolve('./src/css/custom.css'),
+                  },
+                }),
+              ],
+            ],
+            themeConfig:
+              /** @type {import('@docusaurus/preset-classic').ThemeConfig} */
+              ({
+                navbar: {
+                  title: 'KAI Documentation',
+                  logo: {
+                    alt: 'KAI Logo',
+                    src: 'img/logo.svg',
+                  },
+                  items: [
+                    {
+                      href: 'https://github.com/Basilakis/kai',
+                      label: 'GitHub',
+                      position: 'right',
+                    },
+                  ],
+                },
+                footer: {
+                  style: 'dark',
+                  links: [
+                    {
+                      title: 'More',
+                      items: [
+                        {
+                          label: 'GitHub',
+                          href: 'https://github.com/Basilakis/kai',
+                        },
+                      ],
+                    },
+                  ],
+                  copyright: `Copyright © ${new Date().getFullYear()} KAI Project. Built with Docusaurus.`,
+                },
+                prism: {
+                  theme: lightCodeTheme,
+                  darkTheme: darkCodeTheme,
+                },
+              }),
+          };
+
+          module.exports = config;
+          EOL
+
+          # Create directories
+          mkdir -p docs src/css static/img
+
+          # Create custom CSS
+          cat > src/css/custom.css << 'EOL'
+          /**
+           * Any CSS included here will be global. The classic template
+           * bundles Infima by default. Infima is a CSS framework designed to
+           * work well for content-centric websites.
+           */
+
+          /* You can override the default Infima variables here. */
+          :root {
+            --ifm-color-primary: #2e8555;
+            --ifm-color-primary-dark: #29784c;
+            --ifm-color-primary-darker: #277148;
+            --ifm-color-primary-darkest: #205d3b;
+            --ifm-color-primary-light: #33925d;
+            --ifm-color-primary-lighter: #359962;
+            --ifm-color-primary-lightest: #3cad6e;
+            --ifm-code-font-size: 95%;
+            --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+          }
+
+          /* For readability concerns, you should choose a lighter palette in dark mode. */
+          [data-theme='dark'] {
+            --ifm-color-primary: #25c2a0;
+            --ifm-color-primary-dark: #21af90;
+            --ifm-color-primary-darker: #1fa588;
+            --ifm-color-primary-darkest: #1a8870;
+            --ifm-color-primary-light: #29d5b0;
+            --ifm-color-primary-lighter: #32d8b4;
+            --ifm-color-primary-lightest: #4fddbf;
+            --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+          }
+          EOL
+
+          # Create placeholder logo
+          cat > static/img/logo.svg << 'EOL'
+          <svg width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+            <rect width="200" height="200" fill="#2e8555" />
+            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="72" fill="white">KAI</text>
+          </svg>
+          EOL
+
+          # Create empty sidebars.js
+          cat > sidebars.js << 'EOL'
+          module.exports = {
+            tutorialSidebar: []
+          };
+          EOL
+
+          cd ..
 
       - name: Install dependencies
         run: |
-          npm init -y
           npm install fs-extra
-          npm install @docusaurus/core @docusaurus/preset-classic
-
-      - name: Create Docusaurus site
-        run: |
-          npx create-docusaurus@latest kai-docs-temp classic --typescript --skip-install
 
       - name: Process readme files
         run: |
           mkdir -p kai-docs-temp/docs
           node process-readme-files.js
 
-      - name: Fix workspace protocol in package.json
-        run: |
-          cd kai-docs-temp
-          # Replace workspace:* with * in package.json to avoid EUNSUPPORTEDPROTOCOL error
-          sed -i 's/"workspace:\*"/"*"/g' package.json
-
       - name: Build documentation site
         run: |
           cd kai-docs-temp
-          # Use yarn instead of npm to handle dependencies better
-          npm install -g yarn
           yarn install
           yarn build
 
