--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Install Yarn
         run: npm install -g yarn
@@ -47,13 +47,17 @@ jobs:
               "write-heading-ids": "docusaurus write-heading-ids"
             },
             "dependencies": {
-              "@docusaurus/core": "^2.4.3",
-              "@docusaurus/preset-classic": "^2.4.3",
-              "@mdx-js/react": "^1.6.22",
-              "clsx": "^1.2.1",
-              "prism-react-renderer": "^1.3.5",
-              "react": "^17.0.2",
-              "react-dom": "^17.0.2"
+              "@docusaurus/core": "^3.7.0",
+              "@docusaurus/preset-classic": "^3.7.0",
+              "@mdx-js/react": "^3.0.0",
+              "clsx": "^2.1.0",
+              "prism-react-renderer": "^2.3.1",
+              "react": "^18.2.0",
+              "react-dom": "^18.2.0"
+            },
+            "devDependencies": {
+              "@docusaurus/module-type-aliases": "^3.7.0",
+              "@docusaurus/types": "^3.7.0"
             },
             "browserslist": {
               "production": [
@@ -68,7 +72,7 @@ jobs:
               ]
             },
             "engines": {
-              "node": ">=16.14"
+              "node": ">=18.0"
             }
           }
           EOL
@@ -76,8 +80,7 @@ jobs:
           # Create basic Docusaurus config
           cat > docusaurus.config.js << 'EOL'
           // @ts-check
-          const lightCodeTheme = require('prism-react-renderer/themes/github');
-          const darkCodeTheme = require('prism-react-renderer/themes/dracula');
+          import {themes as prismThemes} from 'prism-react-renderer';
 
           /** @type {import('@docusaurus/types').Config} */
           const config = {
@@ -101,12 +104,12 @@ jobs:
                 /** @type {import('@docusaurus/preset-classic').Options} */
                 ({
                   docs: {
-                    sidebarPath: require.resolve('./sidebars.js'),
+                    sidebarPath: './sidebars.js',
                     routeBasePath: '/',
                   },
                   blog: false,
                   theme: {
-                    customCss: require.resolve('./src/css/custom.css'),
+                    customCss: './src/css/custom.css',
                   },
                 }),
               ],
@@ -144,13 +147,13 @@ jobs:
                   copyright: `Copyright © ${new Date().getFullYear()} KAI Project. Built with Docusaurus.`,
                 },
                 prism: {
-                  theme: lightCodeTheme,
-                  darkTheme: darkCodeTheme,
+                  theme: prismThemes.github,
+                  darkTheme: prismThemes.dracula,
                 },
               }),
           };
 
-          module.exports = config;
+          export default config;
           EOL
 
           # Create directories
@@ -188,6 +191,26 @@ jobs:
             --ifm-color-primary-lightest: #4fddbf;
             --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
           }
+
+          /* Sidebar styles */
+          .menu__link {
+            font-size: 0.9rem;
+          }
+
+          .menu__list-item-collapsible {
+            font-weight: bold;
+          }
+
+          /* Document styles */
+          article {
+            max-width: 900px;
+            margin: 0 auto;
+          }
+
+          /* Code block styles */
+          .prism-code {
+            font-size: 0.9rem;
+          }
           EOL
 
           # Create placeholder logo
@@ -200,7 +223,8 @@ jobs:
 
           # Create empty sidebars.js
           cat > sidebars.js << 'EOL'
-          module.exports = {
+          /** @type {import('@docusaurus/plugin-content-docs').SidebarsConfig} */
+          export default {
             tutorialSidebar: []
           };
           EOL
@@ -214,6 +238,7 @@ jobs:
       - name: Process readme files
         run: |
           mkdir -p kai-docs-temp/docs
+          cd readme
           node process-readme-files.js
 
       - name: Build documentation site
