Update documentation deployment workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,11 +1,9 @@
-name: Deploy Documentation
+name: Deploy Readme Documentation
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'readme/**'
   workflow_dispatch:
 
 jobs:
