--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -249,6 +249,67 @@ jobs:
           cd readme
           node process-readme-files.js
 
+          # Additional fix for any problematic files
+          cd ../kai-docs-temp/docs
+
+          # Fix the specific problematic file by recreating it
+          if [ -f "ai-ml/rag-system.md" ]; then
+            echo "Recreating ai-ml/rag-system.md with proper front matter..."
+
+            # Get the content without front matter (skip first 6 lines)
+            CONTENT=$(tail -n +6 ai-ml/rag-system.md)
+
+            # Create new file with proper front matter
+            cat > ai-ml/rag-system.md << 'EOL'
+---
+id: rag-system
+title: "RAG System: Architecture, Enhancements, and Integration Guide"
+sidebar_label: "RAG System: Architecture, Enhancements, and Integration Guide"
+---
+EOL
+
+            # Append the original content
+            echo "$CONTENT" >> ai-ml/rag-system.md
+
+            # Show the result
+            echo "New front matter:"
+            cat ai-ml/rag-system.md | head -5
+          fi
+
+          # Check for any other problematic files and fix them
+          echo "Checking for other problematic files..."
+          for file in $(find . -name "*.md"); do
+            # Check if the file has a colon in the title without quotes
+            if grep -q '^title: [^"].*:.*[^"]$' "$file"; then
+              echo "Found problematic title in $file"
+
+              # Extract the title
+              TITLE=$(grep '^title:' "$file" | sed 's/^title: //')
+
+              # Replace with quoted version
+              sed -i "s/^title: $TITLE/title: \"$TITLE\"/" "$file"
+
+              # Show the result
+              echo "Fixed title in $file:"
+              grep '^title:' "$file"
+            fi
+
+            # Check if the file has a colon in the sidebar_label without quotes
+            if grep -q '^sidebar_label: [^"].*:.*[^"]$' "$file"; then
+              echo "Found problematic sidebar_label in $file"
+
+              # Extract the sidebar_label
+              LABEL=$(grep '^sidebar_label:' "$file" | sed 's/^sidebar_label: //')
+
+              # Replace with quoted version
+              sed -i "s/^sidebar_label: $LABEL/sidebar_label: \"$LABEL\"/" "$file"
+
+              # Show the result
+              echo "Fixed sidebar_label in $file:"
+              grep '^sidebar_label:' "$file"
+            fi
+          done
+
       - name: Install Docusaurus dependencies
         run: |
           cd kai-docs-temp
